[tool.poetry]
name = "Looper emulator"
version = "0.1.0"
description = "A simple emulator of a looper pedal."
authors = ["ikny <vojtech.mikula@email.cz>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
sounddevice = "^0.4.6"
numpy = "^1.26.2"
soundfile = "^0.12.1"

[tool.poetry.dev-dependencies]
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
